# Aircraft-Panel-Defect-Detector

./: .gitignore  CMakeLists.txt  README.md  aircraft_vision.launch..py  dataset_logger.cpp  defect_detector.cpp  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  src:defect_node.py  src:synthetic_generator_node.py  src:synthetic_spoofer.cpp
.github/workflows/: ci.yml
aircraft_panel_detector/: __init__.py  defect_detector_node.py  image_folder_publisher.py  vision.py
docs/: portfolio_walkthrough.md  technical_overview.md
docs/assets/demo/: detections.csv  detections.json
launch/: detector.launch.py  synthetic_demo.launch.py
scripts/: generate_synthetic_panels.py  run_local_demo.py
src/: detector.launch.py  image_folder_publisher.py  launch:defect_detector.launch.py
test/: test_vision.py
