<?xml version="1.0"?>
<package format="3">
  <name>aircraft_panel_detector</name>
  <version>0.1.0</version>
  <description>ROS2 OpenCV aircraft panel defect detection pipeline.</description>
  <maintainer email="7alexalvarez@gmail.com">Alexander Alvarez</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
